Resolve the overflow problem in hero section

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,14 @@
 @import "tailwindcss";
+#root{
+  overflow-x: hidden;
+  width:100%;
 
+}
+html,body{
+  overflow-x: hidden;
+  width: 100%;
+  position: relative;
+}
 
 .Monsieur {
   font-family: "Monsieur La Doulaise", cursive;
